cabal-version:      3.4
name:               prctrl
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             axionbuster
maintainer:         axionbuster@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wno-unused-top-binds

common exts
    default-extensions: BlockArguments, LambdaCase, ViewPatterns,
                        MagicHash, UnboxedTuples
    default-language:   GHC2024

executable prctrl
    import:           warnings, exts
    main-is:          Main.hs
    build-depends:    base, prctrl
    hs-source-dirs:   app

library
    import:           warnings, exts
    hs-source-dirs:   src
    build-depends:    base
    exposed-modules:  System.IO.Cont, Control.Monad.ST.Cont
